Reviewing and Fixing Phase 2 bugs